Merge pull request #336 from GAIGResearch/SaboteurFixes
Saboteur fixes